@@ -1,16 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.jenkins.tools.bom</groupId>
+                <artifactId>bom-2.387.x</artifactId>
+                <version>1945.v13a_1306588ff</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.25</version>
+        <version>4.55</version>
     </parent>
 
     <artifactId>proc-cleaner-plugin</artifactId>
     <packaging>hpi</packaging>
     <name>Process cleaner</name>
     <version>2.5-SNAPSHOT</version>
-    <description>Kill running processes before and after build.</description>
     <url>https://github.com/jenkinsci/proc-cleaner-plugin</url>
 
     <scm>
@@ -26,7 +38,7 @@
             <url>https://repo.jenkins-ci.org/releases</url>
         </repository>
     </distributionManagement>
-    
+
     <repositories>
         <repository>
             <id>repo.jenkins-ci.org</id>
@@ -44,34 +56,33 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <surefire.useFile>false</surefire.useFile>
-        <jenkins.version>1.642</jenkins.version>
+        <jenkins.version>2.387.1</jenkins.version>
         <findbugs.failOnError>false</findbugs.failOnError>
         <concurrency>1C</concurrency>
+        <!-- Surefire option to open modules for reflection that is needed to serialize mocks -->
+        <argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED</argLine>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.8.5</version>
+            <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>matrix-project</artifactId>
-            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
-            <version>1.9</version>
         </dependency>
 
         <dependency>
@@ -80,9 +91,8 @@
             <version>1.3.9-1</version>
         </dependency>
     </dependencies>
-
     <build>
-        <plugins>
+       <plugins>
             <plugin>
                 <groupId>org.jenkins-ci.tools</groupId>
                 <artifactId>maven-hpi-plugin</artifactId>
